design-principles-02/src/main/java/com/farhad/example/design_principles02/ocp/demo2/good/CreditCard.java
package com.farhad.example.design_principles02.ocp.demo2.good;

public class CreditCard implements PaymentMethod {

	@Override
	public void pay(Payment payment) {
	}

}
